@@ -32,7 +32,7 @@ PASS: Canvas context should be "WebGL".
   "antialias": true,
   "premultipliedAlpha": true,
   "preserveDrawingBuffer": false,
-  "powerPreference": "default",
+  "powerPreference": "<filtered>",
   "failIfMajorPerformanceCaveat": false
 }
 
@@ -46,7 +46,7 @@ PASS: Canvas context should be "WebGL".
   "antialias": true,
   "premultipliedAlpha": true,
   "preserveDrawingBuffer": false,
-  "powerPreference": "default",
+  "powerPreference": "<filtered>",
   "failIfMajorPerformanceCaveat": false
 }
 PASS: Canvas context should have attribute "alpha" with value "false".
