@@ -1,3 +1,14 @@
+2019-09-12  Devin Rousso  <drousso@apple.com>
+
+        REGRESSION? (r249786): inspector/canvas/context-attributes.html is failing on macOS WK1
+        https://bugs.webkit.org/show_bug.cgi?id=201714
+        <rdar://problem/55290473>
+
+        Reviewed by Joseph Pecoraro.
+
+        * inspector/canvas/context-attributes.html:
+        * inspector/canvas/context-attributes-expected.txt:
+
 2019-09-12  Russell Epstein  <repstein@apple.com>
 
         Layout Test http/tests/xmlhttprequest/xmlhttprequest-overridemimetype-invalidstaterror.html is flaky.
